Blissify: QS footer visibilities [2/2]
Change-Id: Ice5a3c6db1f0da3ae71e14fed83793943b328dfd

--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -34,6 +34,18 @@
             android:defaultValue="false" />
 
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="qs_footer_show_settings"
+            android:title="@string/qs_footer_settings_title"
+            android:summary="@string/qs_footer_settings_summary"
+            android:defaultValue="true" />
+
+         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="qs_footer_show_services"
+            android:title="@string/qs_footer_services_title"
+            android:summary="@string/qs_footer_services_summary"
+            android:defaultValue="false" />
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="qs_footer_warnings"
             android:title="@string/qs_footer_warnings_title"
             android:summary="@string/qs_footer_warnings_summary"
