Material toast icon switch [2/2]

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -348,5 +348,9 @@
     <string name="battery_bar_high_color">High level color"</string>
     <string name="battery_bar_low_color">Low level color"</string>
 
+    <!-- Toast icon -->
+    <string name="toast_icon_title">Toast icon</string>
+    <string name="toast_icon_summary">Display icon of activity that generates toast message</string>
+
 </resources>
 
