--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -37,4 +37,10 @@
         android:summary="@string/show_cpu_info_summary"
         android:defaultValue="false" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="toast_icon" 
+        android:title="@string/toast_icon_title" 
+        android:summary="@string/toast_icon_summary" 
+        android:defaultValue="true" /> 
+
 </PreferenceScreen>
