Blissify: Welcome Back Lockscreen Item Colors [2/2]
**SDB: Remove Lock Icon color options for Q

Change-Id: I9a0662bc5cb96d5ad2d15f61b7e84b48652797bf
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/weather.xml
+++ b/res/xml/weather.xml
@@ -75,4 +75,26 @@
             android:dependency="lockscreen_weather_enabled" />
 
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="lockscreen_weather_colors_category"
+        android:title="@string/lockscreen_weather_colors">
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_temp_color"
+        android:title="@string/lockscreen_weather_temp_color"
+        settings:defaultColorValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_city_color"
+        android:title="@string/lockscreen_weather_city_color"
+        settings:defaultColorValue="0xffffffff" />
+
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_icon_color"
+        android:title="@string/lockscreen_weather_icon_color"
+        settings:defaultColorValue="0xffffffff" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
