--- a/res/xml/lockscreen_clock.xml
+++ b/res/xml/lockscreen_clock.xml
@@ -54,6 +54,12 @@
         settings:units="dp"
         android:defaultValue="50" />
 
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_clock_color"
+        android:title="@string/lockscreen_clock_color"
+        settings:defaultColorValue="0xffffffff"
+        android:dependency="lockscreen_clock_type" />
+
     <Preference
         android:key="clock_font_size_warning"
         android:selectable="false"
@@ -119,6 +125,11 @@
         settings:units="dp"
         android:defaultValue="18" />
 
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_date_color"
+        android:title="@string/lockscreen_clock_date_color"
+        settings:defaultColorValue="0xffffffff" />
+
     </PreferenceCategory>
 
     <!-- LockScreen Date -->
@@ -141,6 +152,11 @@
         settings:min="10"
         settings:units="dp"
         android:defaultValue="18" />
+
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_owner_info_color"
+        android:title="@string/lockscreen_owner_info_color"
+        settings:defaultColorValue="0xffffffff" />
 
     </PreferenceCategory>
 
