--- a/res/xml/lockscreen_clock.xml
+++ b/res/xml/lockscreen_clock.xml
@@ -144,4 +144,57 @@
 
     </PreferenceCategory>
 
+    <!-- LockScreen Colors -->
+    <PreferenceCategory
+        android:key="lockscreen_colorscategory"
+        android:icon="@drawable/ic_clock"
+        android:title="@string/lockscreen_colors">
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_clock_color"
+        android:title="@string/lockscreen_clock_color"
+        android:defaultValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_clock_date_color"
+        android:title="@string/lockscreen_clock_date_color"
+        android:defaultValue="0xffffffff" />
+
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_owner_info_color"
+        android:title="@string/lockscreen_owner_info_color"
+        android:defaultValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_phone_icon_color"
+        android:title="@string/lockscreen_phone_icon_color"
+        android:defaultValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_camera_icon_color"
+        android:title="@string/lockscreen_camera_icon_color"
+        android:defaultValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_indication_text_color"
+        android:title="@string/lockscreen_indication_text_color"
+        android:defaultValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_temp_color"
+        android:title="@string/lockscreen_weather_temp_color"
+        android:defaultValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_city_color"
+        android:title="@string/lockscreen_weather_city_color"
+        android:defaultValue="0xffffffff" />
+
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_icon_color"
+        android:title="@string/lockscreen_weather_icon_color"
+        android:defaultValue="0xffffffff" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
