Welcome Back Lockscreen Item Colors [2/2]
**SDB: Remove Lock Icon color options for Q

Change-Id: I9a0662bc5cb96d5ad2d15f61b7e84b48652797bf
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/lockscreen_clock.xml
+++ b/res/xml/lockscreen_clock.xml
@@ -144,4 +144,42 @@
 
     </PreferenceCategory>
 
+    <!-- LockScreen Colors -->
+    <PreferenceCategory
+        android:key="lockscreen_colorscategory"
+        android:icon="@drawable/ic_clock"
+        android:title="@string/lockscreen_colors">
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_clock_color"
+        android:title="@string/lockscreen_clock_color"
+        settings:defaultColorValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_date_color"
+        android:title="@string/lockscreen_clock_date_color"
+        settings:defaultColorValue="0xffffffff" />
+
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_owner_info_color"
+        android:title="@string/lockscreen_owner_info_color"
+        settings:defaultColorValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_temp_color"
+        android:title="@string/lockscreen_weather_temp_color"
+        settings:defaultColorValue="0xffffffff" />
+
+     <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_city_color"
+        android:title="@string/lockscreen_weather_city_color"
+        settings:defaultColorValue="0xffffffff" />
+
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="lockscreen_weather_icon_color"
+        android:title="@string/lockscreen_weather_icon_color"
+        settings:defaultColorValue="0xffffffff" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
