--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -14,6 +14,12 @@
              android:targetClass="com.android.settings.applications.appops.AppOpsSummary" />
      </Preference>
 
+     <Preference
+        android:key="smart_pixels"
+        android:title="@string/smart_pixels_title"
+        android:summary="@string/smart_pixels_summary"
+        android:fragment="com.blissroms.blissify.fragments.ui.SmartPixels" />
+
      <PreferenceScreen
         android:key="doze_settings"
         android:title="@string/doze_settings_title"
