--- a/res/xml/gesture_main.xml
+++ b/res/xml/gesture_main.xml
@@ -14,16 +14,10 @@
         android:icon="@drawable/ic_gestures"
         android:fragment="com.blissroms.blissify.fragments.gestures.CarbonGesturesSettings" />
 
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-        android:key="double_tap_sleep_anywhere"
-        android:title="@string/double_tap_sleep_lockscreen"
-        android:icon="@drawable/ic_settings_leds"
-        android:defaultValue="false" />
-
-    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-        android:key="double_tap_sleep_gesture"
-        android:title="@string/double_tap_sleep_gesture_title"
-        android:icon="@drawable/ic_settings_leds"
-        android:defaultValue="false" />
+    <Preference
+        android:title="@string/doubletap_gestures_title"
+        android:summary="@string/doubletap_gestures_summary"
+        android:icon="@drawable/ic_gestures"
+        android:fragment="com.blissroms.blissify.fragments.gestures.DoubletapSettings" />
 
 </PreferenceScreen>
