--- a/res/xml/statusbar_icons.xml
+++ b/res/xml/statusbar_icons.xml
@@ -50,6 +50,12 @@
             android:dependency="network_traffic_state" />
 
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="statusbar_show_wifi_activity"
+            android:title="@string/statusbar_show_wifi_activity_title"
+            android:summary="@string/statusbar_show_wifi_activity_summary"
+            android:defaultValue="true" />
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="use_old_mobiletype"
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
