Pixel Navbar animation toggle [2/2]
Change-Id: I5fd4b61aedc397c05d8b87ce4ec0a1f67a8285c2
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1751,4 +1751,8 @@
     <!-- GVM -->
     <string name="theme_customization_statusbar_height_title">Statusbar Height</string>
     <string name="theme_customization_ui_radius_title">UI Radius</string>
+
+    <!-- Navbar Animation -->
+    <string name="pixel_navbar_anim_title">Pixel animation</string>
+    <string name="pixel_navbar_anim_summary">Toggle home button animation</string>
 </resources>
