--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -75,6 +75,13 @@
             android:entryValues="@array/navbar_layout_values"
             android:defaultValue="default" />
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="pixel_nav_animation"
+            android:title="@string/pixel_navbar_anim_title"
+            android:summary="@string/pixel_navbar_anim_summary"
+            android:dependency="enable_nav_bar"
+            android:defaultValue="true" />
+
         <com.bliss.support.preferences.GlobalSettingSwitchPreference
             android:key="show_rotation_button"
             android:title="@string/show_rotation_button_title"
