--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -408,6 +408,7 @@
         <item>@string/hardware_keys_action_last_app</item>
         <item>@string/hardware_keys_action_split_screen</item>
         <item>@string/hardware_keys_action_close_app</item>
+        <item>@string/hardware_keys_action_torch</item>
         <!--
         <item>@string/hardware_keys_action_single_handed_left</item>
         <item>@string/hardware_keys_action_single_handed_right</item>
@@ -449,6 +450,7 @@
         <item>10</item>
         <item>11</item>
         <item>12</item>
+        <item>13</item>
     </string-array>
 
     <string-array name="hardware_keys_action_values_go" translatable="false">
