Blissify: Option to use volume keys to control ring volume anytime (2/2)
Change-Id: Ia804c1d67d0d1c3002fc1176faf300be290e15e8

--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -306,6 +306,13 @@
             android:summary="@string/volume_steps_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.VolumeSteps" />
 
+        <!-- Volume keys control media stream -->
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="volume_keys_control_ring_tone"
+            android:title="@string/volume_keys_control_ring_tone_title"
+            android:summary="@string/volume_keys_control_ring_tone_summary"
+            android:defaultValue="false" />
+
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_wake_screen"
             android:icon="@drawable/ic_prevent_accidental_wakeup"
