--- a/res/xml/statusbar_icons.xml
+++ b/res/xml/statusbar_icons.xml
@@ -7,6 +7,22 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
+     <PreferenceCategory
+         android:key="statusbar_icons"
+         android:title="@string/statusbar_icons_cat"/>
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="statusbar_show_wifi_activity"
+            android:title="@string/statusbar_show_wifi_activity_title"
+            android:summary="@string/statusbar_show_wifi_activity_summary"
+            android:defaultValue="true" />
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="use_old_mobiletype"
+            android:title="@string/use_old_mobiletype_title"
+            android:summary="@string/use_old_mobiletype_summary"
+            android:defaultValue="false" />
+
     <PreferenceCategory
         android:title="@string/carrier_label_settings_title"/>
 
@@ -49,17 +65,34 @@
             android:defaultValue="0"
             android:dependency="network_traffic_state" />
 
-        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-            android:key="statusbar_show_wifi_activity"
-            android:title="@string/statusbar_show_wifi_activity_title"
-            android:summary="@string/statusbar_show_wifi_activity_summary"
-            android:defaultValue="true" />
+    <PreferenceCategory
+        android:key="statusbar_notifi"
+        android:title="@string/statusbar_notifi_cat" />
 
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
-            android:key="use_old_mobiletype"
-            android:title="@string/use_old_mobiletype_title"
-            android:summary="@string/use_old_mobiletype_summary"
+            android:key="status_bar_show_ticker"
+            android:title="@string/status_bar_show_ticker_title"
+            android:summary="@string/status_bar_show_ticker_summary"
             android:defaultValue="false" />
+
+        <com.blissroms.blissify.preference.SystemSettingIntListPreference
+            android:key="status_bar_ticker_animation_mode"
+            android:title="@string/ticker_animation_mode_title"
+            android:entries="@array/ticker_animation_mode_entries"
+            android:entryValues="@array/ticker_animation_mode_values"
+            android:dependency="status_bar_show_ticker"
+            android:defaultValue="0" />
+
+        <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+            android:key="status_bar_ticker_tick_duration"
+            android:title="@string/ticker_tick_duration_title"
+            android:dependency="status_bar_show_ticker"
+            android:min="500"
+            android:max="10000"
+            android:defaultValue="3000"
+            bliss:interval="100"
+            bliss:unitsLeft=""
+            bliss:unitsRight="ms" />
 
     <PreferenceCategory
         android:key="statusbar_weather"
