Blissify: Sensor block per-package switch (2/2)
Change-Id: I094cf2a6ebe6cb73a1cca73790e6dd098d93637c

--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -32,6 +32,12 @@
         android:fragment="com.blissroms.blissify.fragments.ui.SuspendActions" />
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="sensor_block"
+        android:title="@string/sensor_block_title"
+        android:summary="@string/sensor_block_summary"
+        android:defaultValue="false" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="enable_conditions"
         android:title="@string/dashboard_conditions_title"
         android:summaryOn="@string/summary_dashboard_conditions_enabled"
