Status Bar Notifications count switch
Change-Id: I316bc49f9b1c510d122b5e28ce84343676aaf424

--- a/res/xml/statusbar_icons.xml
+++ b/res/xml/statusbar_icons.xml
@@ -70,6 +70,12 @@
         android:title="@string/statusbar_notifi_cat" />
 
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="status_bar_notif_count"
+            android:title="@string/status_bar_notif_count_title"
+            android:summary="@string/status_bar_notif_count_summary"
+            android:defaultValue="false" />
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="status_bar_show_ticker"
             android:title="@string/status_bar_show_ticker_title"
             android:summary="@string/status_bar_show_ticker_summary"
