--- a/res/xml/statusbar_clock.xml
+++ b/res/xml/statusbar_clock.xml
@@ -32,6 +32,24 @@
             android:title="@string/clock_seconds_display"
             android:dependency="status_bar_clock"
             android:defaultValue="false" />
+
+        <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+            android:key="status_bar_clock_size"
+            android:title="@string/status_bar_clock_font_size_title"
+            android:max="23"
+            android:min="4"
+            android:defaultValue="14"
+            android:dependency="status_bar_clock" />
+
+        <ListPreference
+            android:key="status_bar_clock_font_style"
+            android:dialogTitle="@string/status_bar_clock_font_style_title"
+            android:title="@string/status_bar_clock_font_style_title"
+            android:entries="@array/lock_clock_fonts_entries"
+            android:entryValues="@array/lock_clock_fonts_values"
+            android:summary="@string/status_bar_clock_font_style_summary"
+            android:defaultValue="0"
+            android:dependency="status_bar_clock" />
             
         <ListPreference
             android:key="clock_date_display"
