--- a/res/xml/buttons_navbar.xml
+++ b/res/xml/buttons_navbar.xml
@@ -33,6 +33,12 @@
         android:dependency="navigation_bar_show"
         android:defaultValue="false" />
 
+    <Preference
+            android:key="pulse_settings"
+            android:title="@string/pulse_settings"
+            android:summary="@string/pulse_settings_summary"
+            android:fragment="com.blissroms.blissify.fragments.buttons.PulseSettings" />
+
     <PreferenceCategory
         android:key="navigation_burnin"
         android:title="@string/navigation_burnin_category"/>
