--- a/res/xml/pulse_settings.xml
+++ b/res/xml/pulse_settings.xml
@@ -41,6 +41,18 @@
         android:defaultValue="0xffffff"
         android:dependency="eos_fling_show_pulse" />
 
+        <com.android.settings.bliss.preference.ColorPickerPreference
+            android:key="fling_lavalamp_color_from"
+            android:title="@string/fling_lavalamp_color_from"
+            android:defaultValue="0xffff8080"
+            android:dependency="eos_fling_lavalamp" />
+
+         <com.android.settings.bliss.preference.ColorPickerPreference
+            android:key="fling_lavalamp_color_to"
+            android:title="@string/fling_lavalamp_color_to"
+            android:defaultValue="0xff8080ff"
+            android:dependency="eos_fling_lavalamp" />
+
     <SwitchPreference
         android:key="eos_fling_lavalamp"
         android:title="@string/eos_fling_lavalamp_title"
