--- a/res/xml/pulse_settings.xml
+++ b/res/xml/pulse_settings.xml
@@ -41,23 +41,29 @@
         android:defaultValue="0xffffff"
         android:dependency="eos_fling_show_pulse" />
 
-        <com.android.settings.bliss.preference.ColorPickerPreference
-            android:key="fling_lavalamp_color_from"
-            android:title="@string/fling_lavalamp_color_from"
-            android:defaultValue="0xffff8080"
-            android:dependency="eos_fling_lavalamp" />
-
-         <com.android.settings.bliss.preference.ColorPickerPreference
-            android:key="fling_lavalamp_color_to"
-            android:title="@string/fling_lavalamp_color_to"
-            android:defaultValue="0xff8080ff"
-            android:dependency="eos_fling_lavalamp" />
+    <SwitchPreference
+        android:key="fling_smoothing_enabled"
+        android:title="@string/fling_smoothing_enabled_title"
+        android:summary="@string/fling_smoothing_enabled_summary"
+        android:dependency="eos_fling_show_pulse" />
 
     <SwitchPreference
         android:key="eos_fling_lavalamp"
         android:title="@string/eos_fling_lavalamp_title"
         android:summary="@string/eos_fling_lavalamp_summary"
         android:dependency="eos_fling_show_pulse" />
+
+    <com.android.settings.bliss.preference.ColorPickerPreference
+        android:key="fling_lavalamp_color_from"
+        android:title="@string/fling_lavalamp_color_from"
+        android:defaultValue="0xffff8080"
+        android:dependency="eos_fling_lavalamp" />
+
+     <com.android.settings.bliss.preference.ColorPickerPreference
+        android:key="fling_lavalamp_color_to"
+        android:title="@string/fling_lavalamp_color_to"
+        android:defaultValue="0xff8080ff"
+        android:dependency="eos_fling_lavalamp" />
 
     <!--<com.abc.support.preferences.CustomSeekBarPreference
         android:key="pulse_custom_buttons_opacity"
