Add Pulse blacklist option
Change-Id: I90475222451f64dc47f5134336d404f2f439d3a1

--- a/res/xml/buttons_navbar.xml
+++ b/res/xml/buttons_navbar.xml
@@ -33,8 +33,8 @@
         android:dependency="navigation_bar_show"
         android:defaultValue="false" />
 
-    <Preference
-            android:key="pulse_settings"
+    <PreferenceScreen
+            android:id="@+id/pulse_settings"
             android:title="@string/pulse_settings"
             android:summary="@string/pulse_settings_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.PulseSettings" />
