--- a/res/values/seekbar_preference_attrs.xml
+++ b/res/values/seekbar_preference_attrs.xml
@@ -28,4 +28,11 @@
         <attr name="value_popup_view_bg" format="color" />
     </declare-styleable>
 
+    <declare-styleable name="CustomSeekBarPreference">
+        <attr name="interval" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="units" format="string|reference" />
+        <attr name="defaultText" format="string|reference" />
+    </declare-styleable>
+
 </resources>
