--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -51,6 +51,29 @@
         android:summary="@string/notification_guts_kill_app_button_summary"
         android:defaultValue="false" />
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="status_bar_show_ticker"
+        android:title="@string/ticker_screen_title"
+        android:entries="@array/ticker_mode_entries"
+        android:entryValues="@array/ticker_mode_values"
+        android:defaultValue="0" />
+
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="status_bar_ticker_animation_mode"
+        android:title="@string/ticker_animation_mode_title"
+        android:entries="@array/ticker_animation_mode_entries"
+        android:entryValues="@array/ticker_animation_mode_values"
+        android:defaultValue="1" />
+
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="status_bar_ticker_tick_duration"
+        android:title="@string/ticker_tick_duration_title"
+        settings:min="500"
+        settings:interval="100"
+        android:max="10000"
+        android:defaultValue="3000"
+        settings:units="@string/unit_milliseconds" />
+
     <PreferenceCategory
         android:key="notification_screen"
         android:title="@string/notification_screen_title" >
