--- a/res/xml/pulse_settings.xml
+++ b/res/xml/pulse_settings.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2012-2014 The TeamEos Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -23,7 +26,7 @@
 
     <PreferenceScreen
         android:key="blacklist_fragment"
-        android:fragment="com.blissroms.blissify.fragments.buttons.PulseBlacklist"
+        android:fragment="com.blissroms.blissify.fragments.PulseBlacklist"
         android:title="@string/pulse_blacklist_title"
         android:summary="@string/pulse_blacklist_summary"
         android:persistent="false" />
@@ -122,6 +125,13 @@
             android:max="6"
             settings:min="2"
             android:dependency="pulse_fading_bars_category"/>
+
+        <com.blissroms.blissify.preference.CustomSeekBarPreference
+            android:key="pulse_fading_blocks_opacity"
+            android:title="@string/pulse_fading_blocks_opacity"
+            android:max="255"
+            settings:min="0"
+            android:dependency="eos_fling_show_pulse" />
 
         <com.blissroms.blissify.preference.CustomSeekBarPreference
             android:key="fling_pulse_lavalamp_speed"
