--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -535,6 +535,8 @@
     <string name="add_heads_up_package">Add app</string>
     <string name="heads_up_stoplist_title">Stoplist</string>
     <string name="add_heads_up_stoplist_summary">Disable heads up in these applications</string>
+    <string name="headsup_activity_blacklist_title">Heads up notifications blacklist</string>
+    <string name="headsup_activity_blacklist_summary">Apps not allowed to show headsup notifications</string>
     <string name="heads_up_blacklist_title">Blacklist</string>
     <string name="add_heads_up_blacklist_summary">Disable heads up for these applications</string>
     <string name="profile_choose_app">Choose app</string>
