--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -20,11 +20,19 @@
 
     <com.bliss.support.preferences.GlobalSettingMasterSwitchPreference 
         android:key="heads_up_notifications_enabled"
-        android:fragment="com.blissroms.blissify.fragments.notifications.HeadsUp"
+        android:fragment="com.blissroms.blissify.fragments.notifications.HeadsUpOptions"
         android:icon="@drawable/ic_headsup"
         android:title="@string/heads_up_notifications"
         android:summary="@string/heads_up_notifications_summary"
         android:defaultValue="true" />
+
+    <PreferenceScreen
+        android:key="headsup_activity_blacklist"
+        android:fragment="com.blissroms.blissify.fragments.notifications.HeadsUp"
+        android:title="@string/headsup_activity_blacklist_title"
+        android:summary="@string/headsup_activity_blacklist_summary"
+        android:dependency="heads_up_notifications_enabled"
+        android:persistent="false" />
 
   <PreferenceCategory
         android:title="@string/breathing_notifications_category" >
