--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -396,6 +396,17 @@
         <item>1</item>
     </string-array>
 
+    <!-- Pie and Oreo recents -->
+    <string-array name="recents_component_type_title_entries">
+        <item>@string/recents_pie</item>
+        <item>@string/recents_oreo</item>
+    </string-array>
+
+     <string-array name="recents_component_type_title_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- Heads up snooze -->
     <string-array name="heads_up_snooze_entries">
         <item>@string/disabled</item>
