--- a/res/xml/recents_style.xml
+++ b/res/xml/recents_style.xml
@@ -12,4 +12,12 @@
             android:entryValues="@array/navbar_recents_style_values"
             android:persistent="false"/>
 
+        <ListPreference
+            android:key="recents_component"
+            android:title="@string/recents_component_type_title"
+            android:dialogTitle="@string/recents_component_type_title"
+            android:entries="@array/recents_component_type_title_entries"
+            android:defaultValue="0"
+            android:entryValues="@array/recents_component_type_title_values"/>
+
 </PreferenceScreen>
