--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1677,6 +1677,7 @@
         <item>@string/qstile_ninja</item>
         <item>@string/qstile_dottedcircle</item>
         <item>@string/qstile_attemptmountain</item>
+        <item>@string/qstile_squaremedo</item>
     </string-array>
 
     <string-array name="qs_selector_values" translatable="false">
@@ -1689,6 +1690,7 @@
         <item>6</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
     </string-array>
 
 </resources>
