--- a/res/xml/statusbar_icons.xml
+++ b/res/xml/statusbar_icons.xml
@@ -23,6 +23,12 @@
             android:summary="@string/use_old_mobiletype_summary"
             android:defaultValue="false" />
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="roaming_indicator_icon"
+            android:title="@string/roaming_indicator_icon_title"
+            android:summary="@string/roaming_indicator_icon_summary"
+            android:defaultValue="true"/>
+
     <PreferenceCategory
         android:title="@string/carrier_label_settings_title"/>
 
