--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -644,15 +644,17 @@
     <!-- QS tile styles -->
     <string-array name="qs_selector_entries" translatable="false">
         <item>@string/qstile_default</item>
+        <item>@string/qstile_circle_gradient</item>
         <item>@string/qstile_circle_trim</item>
+        <item>@string/qstile_dottedcircle</item>
+        <item>@string/qstile_circle_dualtone</item>
         <item>@string/qstile_dual_tone_circle</item>
         <item>@string/qstile_oreo</item>
         <item>@string/qstile_oreo_circle_trim</item>
         <item>@string/qstile_oreo_squircle_trim</item>
         <item>@string/qstile_squircle_trim</item>
     </string-array>
-
-     <string-array name="qs_selector_values" translatable="false">
+    <string-array name="qs_selector_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
@@ -660,6 +662,9 @@
         <item>4</item>
         <item>5</item>
         <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
     </string-array>
 
     <!-- Notification ticker -->
