--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -51,6 +51,13 @@
         android:summaryOff="@string/summary_dashboard_suggestions_disabled"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingListPreference
+        android:key="screenshot_type"
+        android:entries="@array/screenshot_type_entries"
+        android:entryValues="@array/screenshot_type_values"
+        android:title="@string/screenshot_type_title"
+        android:defaultValue="0" />
+
     <PreferenceCategory
         android:key="aspect_ratio_category"
         android:title="@string/aspect_ratio_category_title">
